--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -984,7 +984,7 @@ section.camping {
       transition: 0.5s;
 
       &:hover {
-        color: #000;
+        color: #12335e;
         background-color: rgb(235, 205, 107);
         box-shadow: 0 0 50px rgb(235, 205, 107);
         transition-delay: 0.3s;
