--- a/css/dokdo.css
+++ b/css/dokdo.css
@@ -971,6 +971,8 @@ div.flex section.card .card_container a {
 }
 
 footer {
+  width: 100vw;
+  height: 150px;
   margin: 80px 0 50px;
   text-align: center;
   border-top: 1px solid #000;
@@ -984,6 +986,7 @@ footer address {
   color: #999;
   text-align: center;
   font-size: 1.3rem;
+  margin-bottom: 50px;
 }
 
 footer address span {
