--- a/css/dokdo.scss
+++ b/css/dokdo.scss
@@ -987,6 +987,8 @@ div.flex {
   }
 }
 footer {
+  width: 100vw;
+  height: 150px;
   margin: 80px 0 50px;
   text-align: center;
   border-top: 1px solid #000;
@@ -998,6 +1000,7 @@ footer {
     color: #999;
     text-align: center;
     font-size: 1.3rem;
+    margin-bottom: 50px;
 
     span {
       font-weight: 800;
