--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,3 +1,17 @@
+#wrap,
+body {
+  position: relative;
+  z-index: -9999;
+  width: 100vw;
+
+  color: #222;
+  font-family: "noto sans CJK KR";
+  font-size: 0.652rem;
+
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 header {
   position: fixed;
   z-index: 99999;
@@ -97,6 +111,28 @@ header {
       &:hover {
         color: #919191;
       }
+    }
+  }
+}
+
+footer {
+  width: 100vw;
+  height: 150px;
+  margin: 80px 0 50px;
+  text-align: center;
+  border-top: 1px solid #000;
+
+  p {
+    margin-top: 30px;
+  }
+  address {
+    color: #999;
+    text-align: center;
+    font-size: 1.3rem;
+    margin-bottom: 50px;
+
+    span {
+      font-weight: 800;
     }
   }
 }
