--- a/css/reset.css
+++ b/css/reset.css
@@ -69,7 +69,7 @@ a:visited {
 }
 
 a:hover {
-  /* text-decoration: underline; */
+  text-decoration: underline;
 }
 
 a:active {
@@ -83,8 +83,20 @@ body {
   font-family: 돋움;
 }
 
-.text-center {
-  height: 100px;
-  line-height: 100px;
-  text-align: center;
+#wrap,
+body {
+  position: relative;
+  z-index: -9999;
+  width: 100vw;
+
+  color: #222;
+  font-family: "noto sans CJK KR";
+  font-size: 0.652rem;
+
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+caption {
+  display: none;
 }
