--- a/css/gangneung.scss
+++ b/css/gangneung.scss
@@ -20,7 +20,7 @@ section.main {
   .mn_bg {
     .mn_city {
       position: absolute;
-      bottom: -35px;
+      bottom: -40px;
       z-index: 50;
       display: flex;
       width: calc(100vw * 6);
@@ -38,7 +38,7 @@ section.main {
 
     .cloude {
       position: absolute;
-      top: 50px;
+      top: 30px;
       z-index: 0;
       display: flex;
       width: calc(100vw * 4);
@@ -173,6 +173,17 @@ section.course {
         font-size: 1.3rem;
         line-height: 1.7;
       }
+      span {
+        display: block;
+        width: 180px;
+        height: 25px;
+        margin: 10px auto 0;
+        color: #222;
+        font-size: 1.1rem;
+        line-height: 25px;
+        font-weight: 600;
+        background-color: #ffc55f;
+      }
     }
 
     .cs_content {
@@ -239,7 +250,6 @@ section.course {
 
         width: 900px;
         height: 400px;
-
         ol {
           position: absolute;
           z-index: 100;
