--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -4,6 +4,11 @@
 $tablet: "screen and (max-width:992px)";
 $mobile: "screen and (max-width:768px)";
 
+#wrap {
+  position: relative;
+  z-index: -100;
+}
+
 header {
   position: fixed;
   top: 0;
