--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -4,7 +4,8 @@
 $tablet: "screen and (max-width:992px)";
 $mobile: "screen and (max-width:768px)";
 
-#wrap {
+#wrap,
+body {
   position: relative;
   z-index: -100;
 }
@@ -510,6 +511,29 @@ section.suggestion {
       font-size: 1.5rem;
       padding-bottom: 10px;
       margin-bottom: 10px;
+    }
+
+    select {
+      width: calc(100% / 6 - 20px);
+      height: 30px;
+
+      font-family: "noto sans CJK KR";
+      font-size: 1.2rem;
+      text-indent: 10px;
+
+      &:nth-of-type(2) {
+        display: none;
+      }
+
+      input {
+        width: 200px;
+        height: 40px;
+        margin-bottom: 20px;
+        font-family: "noto sans CJK KR";
+        text-indent: 10px;
+        font-size: 1.2rem;
+        border: 1px solid #555;
+      }
     }
 
     .where {
