--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -492,15 +492,15 @@ section.suggestion {
   position: relative;
 
   width: 100vw;
-  height: 300px;
+  height: 270px;
   background-color: #4dbdac;
 
   .sg_container {
     position: relative;
     top: -80px;
     z-index: 200;
-    width: 900px;
-    height: 350px;
+    width: 770px;
+    height: 320px;
     margin: 0 auto;
     padding: 30px;
     background-color: #fff;
@@ -513,76 +513,143 @@ section.suggestion {
       margin-bottom: 10px;
     }
 
-    select {
-      width: calc(100% / 6 - 20px);
-      height: 30px;
-
-      font-family: "noto sans CJK KR";
-      font-size: 1.2rem;
-      text-indent: 10px;
-
-      &:nth-of-type(2) {
-        display: none;
-      }
-
-      input {
-        width: 200px;
-        height: 40px;
-        margin-bottom: 20px;
-        font-family: "noto sans CJK KR";
-        text-indent: 10px;
-        font-size: 1.2rem;
-        border: 1px solid #555;
-      }
-    }
-
-    .where {
+    .sg_text {
       display: flex;
       justify-content: space-between;
-      border-bottom: 1px solid #555;
+      width: 700px;
 
-      input {
-        width: 170px;
-        height: 40px;
-        margin-bottom: 20px;
-        font-family: "noto sans CJK KR";
-        text-indent: 10px;
+      p.sg_p {
+        height: 25px;
+        margin-bottom: 15px;
+        padding-bottom: 5px;
+
+        color: #c0c0c0;
         font-size: 1.2rem;
-        border: 1px solid #555;
+        line-height: 30px;
+        border-bottom: 1px solid #c0c0c0;
       }
-      .date {
-        display: flex;
-        justify-content: space-between;
-        width: 250px;
-        height: 42px;
-        margin-bottom: 20px;
 
-        font-family: "noto sans CJK KR";
-        text-indent: 10px;
-        font-size: 1.2rem;
-        line-height: 40px;
-        border: 1px solid #555;
+      .left {
+        .sg_local {
+          width: 100%;
+          .ct_container {
+            display: flex;
+            justify-content: space-between;
+            width: 320px;
+            height: 60px;
 
-        input {
-          width: 130px;
-          height: 42px;
-          margin: 0;
-          border: none;
+            select {
+              display: inline-block;
+              width: 150px;
+              height: 30px;
+              margin-right: 12px;
+              margin-bottom: 30px;
+
+              font-family: "noto sans CJK KR";
+              font-size: 1.2rem;
+              text-indent: 10px;
+
+              &:nth-of-type(2) {
+                display: none;
+                margin-right: 0;
+              }
+            }
+          }
+        }
+
+        .sg_data {
+          .ct_container {
+            display: flex;
+            justify-content: space-between;
+            width: 320px;
+            height: 60px;
+            input {
+              display: inline-block;
+              width: 145px;
+              height: 30px;
+              margin-right: 12px;
+              margin-bottom: 30px;
+
+              font-family: "noto sans CJK KR";
+              font-size: 1.2rem;
+              text-indent: 10px;
+
+              &:nth-of-type(2) {
+                margin-right: 0;
+              }
+            }
+          }
         }
       }
 
-      a {
-        display: block;
-        width: 120px;
-        height: 42px;
-        margin-bottom: 20px;
+      .right {
+        position: relative;
+        width: 320px;
+        .ct_contet {
+          div {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
 
-        color: #fff;
-        font-size: 1.2rem;
-        line-height: 42px;
-        text-align: center;
-        font-weight: 800;
-        background-color: #222;
+            &:nth-of-type(2) {
+              margin-top: 20px;
+            }
+
+            p {
+              width: 200px;
+              color: #777;
+              font-size: 1.3rem;
+              font-weight: 500;
+              line-height: 30px;
+
+              i {
+                width: 30px;
+                color: #777;
+                font-size: 1.8rem;
+                line-height: 25px;
+              }
+            }
+            > div {
+              display: flex;
+              justify-content: right;
+              margin-top: 0;
+
+              > p {
+                width: 50px;
+                height: 30px;
+                color: #777;
+                font-size: 1.5rem;
+                line-height: 30px;
+                text-align: center;
+              }
+
+              a {
+                display: block;
+                width: 30px;
+                height: 30px;
+                color: #777;
+                font-size: 2rem;
+                font-weight: 800;
+                line-height: 30px;
+                text-align: center;
+                background-color: #f2f2f2;
+                border-radius: 50%;
+              }
+            }
+          }
+        }
+
+        > a {
+          position: absolute;
+          right: 0;
+          bottom: 25px;
+          padding: 10px 35px;
+          color: #fff;
+          font-size: 1.2rem;
+          text-align: center;
+          background-color: #222;
+        }
       }
     }
   }
