--- a/css/reset.css
+++ b/css/reset.css
@@ -2,10 +2,19 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
+
 html,
 body {
   width: 100%;
   height: 100%;
+
+  font-family: "noto sans CJK KR";
+  color: #222;
+  font-size: 10px;
+  line-height: 1.2;
+
+  box-sizing: border-box;
 }
 
 body,
@@ -68,35 +77,6 @@ a:visited {
   color: #222;
 }
 
-/* a:hover {
-  text-decoration: underline;
-} */
-
 a:active {
   color: #222;
-}
-
-body {
-  color: #222;
-  font-size: 12px;
-  line-height: 1.2;
-  font-family: 돋움;
-}
-
-#wrap,
-body {
-  position: relative;
-  z-index: -9999;
-  width: 100vw;
-
-  color: #222;
-  font-family: "noto sans CJK KR";
-  font-size: 0.652rem;
-
-  box-sizing: border-box;
-  overflow-x: hidden;
-}
-
-caption {
-  display: none;
 }
